src/pictor.css
:root {
    --font-stack: "Inter", system-ui, sans-serif;
    --line-height: 15px;

    /* colors */
    --color-white: #fff;
    --color-white-hover: #fdfdfd;
    --color-heading: #212121;
    --color-heading-hover: #403e3e;
    --color-text: #000000;

    --color-button-filled-text: #fff;
    --color-button-outline-text: #212121;
    --color-button-theme-text: #fff;

    --color-theme-1: #43a047;
    --color-theme-1-hover: #4caf50;
    --color-theme-2: #039be5;
    --color-theme-2-hover: #03a9f4;
    --color-theme-3: #5e35b1;
    --color-theme-3-hover: #673ab7;
    --color-theme-4: #e53935;
    --color-theme-4-hover: #f44336;

    /* dark theme colors */
    --invert-color-white: #212121;
    --invert-color-white-hover: #493e3e;
    --invert-color-heading: #fff;
    --invert-color-heading-hover: #fdfdfd;
    --invert-color-text: #fff;

    --invert-color-button-filled-text: #212121;
    --invert-color-button-outline-text: #fff;
}

body {
    margin: 0;
    background-color: var(--color-white);
    font-family: var(--font-stack);
    -webkit-font-smoothing: antialiased;
}

/* typography */
h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 500;
    color: var(--color-heading);
    padding: 0;
    margin: 12px 0px;
}

.bold {
    font-weight: bold;
}

.clean {
    text-decoration: none;
}

.underline {
    text-decoration: underline;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.25rem;
}

h5 {
    font-size: 1rem;
}

h6 {
    font-size: 0.75rem;
}

p {
    font-weight: 300;
    color: var(--color-text);
    line-height: 1.2rem;
    font-size: 0.9rem;
    margin: 0;
}

/* buttons */
.btn {
    display: flex;
    margin: 12px 0px;
    padding: 8px 26px;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
    border-radius: 5px;
    font-size: 0.9rem;
    font-weight: 500;
    font-family: var(--font-stack);
    color: var(--color-button-filled-text);
    background-color: var(--color-heading);
    border: none;
    cursor: pointer;
}

.btn:hover {
    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.1);
}

.btn-light {
    background-color: var(--color-white);
    color: var(--color-button-outline-text);
    border: 1px solid var(--color-heading);
}

.btn-theme-1 {
    background-color: var(--color-theme-1);
    color: #fff;
}

.btn-theme-2 {
    background-color: var(--color-theme-2);
    color: #fff;
}

.btn-theme-3 {
    background-color: var(--color-theme-3);
    color: #fff;
}

.btn-theme-4 {
    background-color: var(--color-theme-4);
    color: #fff;
}

/* dark mode theme */
body.dark-mode {
    --color-white: var(--invert-color-white);
    --color-white-hover: var(--invert-color-white-hover);
    --color-heading: var(--invert-color-heading);
    --color-heading-hover: var(--invert-color-heading-hover);
    --color-text: var(--invert-color-text);

    --color-button-filled-text: var(--invert-color-button-filled-text);
    --color-button-outline-text: var(--invert-color-button-outline-text);
}

